fixes for pasting unicode text for bug 18276 r=akkana